CODE: Remove GC settings from shell scripts
The Concurent Mark/Sweep GC will be removed in future Java release.